--- a/nx584/config.ini
+++ b/nx584/config.ini
@@ -1,5 +1,5 @@
 [config]
-max_zone = 13
+max_zone = 8
 zone_name_update = False
 
 # Set to true if your unit sends DD/MM dates instead of MM/DD
@@ -20,17 +20,11 @@ use_binary_protocol = False
 #smtphost = imap.foo.com
 
 [zones]
-# Zone names
-1 = Main Entrance
-2 = Motion Sensor
-3 = Living Room W1
-4 = Living Room W2
-5 = Living Room W3
-6 = BathRoom
-7 = Guest Room W1
-8 = Fire Sensor
-9 = Guest Room W2
-10 = Family Room W1
-11 = Sliding Door
-12 = Family Room W2
-13 = Garage Exit
+1 = Office Door
+2 = Office Motion
+3 = Office Window
+4 = Basement Door
+5 = Mailbox
+6 = Under Deck
+7 = Driveway
+8 = Deck Door
